[gd_scene load_steps=7 format=3 uid="uid://c6owkvpyjim8f"]

[ext_resource type="Script" path="res://scenes/monster_enemy.gd" id="1_2lsx5"]
[ext_resource type="Texture2D" uid="uid://dlo360g163kto" path="res://sprites/characters/roguelikeChar_transparent.png" id="2_2rn2x"]
[ext_resource type="Script" path="res://scenes/label_monster.gd" id="3_7ukjb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr47k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oc2ul"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8xe2"]

[node name="MonsterEnemy" type="CharacterBody2D"]
script = ExtResource("1_2lsx5")
damage_to_player = 25

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2(4.50143, -4.8865)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_pr47k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oc2ul")

[node name="DammageArea" type="Area2D" parent="."]
scale = Vector2(1.14232, 1.12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DammageArea"]
shape = SubResource("RectangleShape2D_s8xe2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2rn2x")
region_enabled = true
region_rect = Rect2(0, 52, 16, 16)

[node name="HurtTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = -32.0
offset_right = 21.0
offset_bottom = -9.0
script = ExtResource("3_7ukjb")

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="area_entered" from="DammageArea" to="." method="_on_dammage_area_area_entered"]
